<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <TextView
        style="@style/text_black_style"
        android:layout_marginLeft="16dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="押金"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/text_black_style"
            android:layout_marginLeft="16dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="押金说明"
            />
        <TextView
            android:id="@+id/txtYJ"
            style="@style/text_black_style"
            android:layout_marginLeft="5dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>
    <TextView
        style="@style/text_gray_style"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:text="@string/yajin_explain1"
        />
    <TextView
        style="@style/text_gray_style"
        android:layout_marginLeft="16dp"
        android:paddingTop="3dp"
        android:text="@string/yajin_explain2"
        />
    <TextView
        style="@style/text_gray_style"
        android:layout_marginLeft="16dp"
        android:paddingTop="3dp"
        android:text="@string/yajin_explain3"
        />
    <TextView
        style="@style/text_gray_style"
        android:layout_marginLeft="16dp"
        android:paddingTop="3dp"
        android:text="@string/yajin_explain4"
        />
    <TextView
        style="@style/text_gray_style"
        android:layout_marginLeft="16dp"
        android:text="@string/yajin_explain5"
        android:paddingTop="3dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="7dp"
            android:src="@drawable/close_gray"
            />
    </LinearLayout>
</LinearLayout>